# humanoid

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Justfile  LICENSE  README.md  main.py  pyproject.toml
.release-notes/: v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.3.0.md  wave14b.md
config/: interest_pool.yaml  knowledge_pool.yaml  models.yaml  temperament_default.yaml  temperament_test.yaml
config/personas/: enfj.yaml  enfp.yaml  entj.yaml  entp.yaml  esfj.yaml  esfp.yaml  estj.yaml  estp.yaml  extrovert_warm.yaml  infj.yaml  infp.yaml  intj.yaml  intp.yaml  introvert_thoughtful.yaml  isfj.yaml  isfp.yaml  istj.yaml  istp.yaml  playful_companion.yaml  sensitive_empathic.yaml  steady_analytical.yaml
core/: __init__.py  event_bus.py  orchestrator.py  trigger_registry.py  turn.py  turn_snapshot.py
docs/: api-contract.md  architecture.md  behavior-contract.md  cognitive-architecture-history.md  cognitive-architecture-v12-spec.md  decisions.md  development.md  eval-literature.md  getting-started.md  implementation-spec.md  persona-eval-v2.md  research-insights.md  state-of-the-project.md
high_level/: __init__.py  affect_translator.py  candidate_generation.py  dmn.py  emotion_appraisal.py  final_judgment.py  introspection.py  judge_finalize.py  memory_retrieval.py  metacognition.py  output_postprocess.py  response_critic.py  response_guardrails.py  social_cognition.py  unified_response.py
interface/: __init__.py  experience_descent.py  schemas.py  signal_rise.py
llm/: __init__.py  client.py  mock.py  prompts.py  prompts_meta.py
low_level/: __init__.py  drives.py  emotion_base.py  fast_path.py  internal_state.py  markers.py  pipeline.py  self_sensing.py  spec_invariants.py  temperament.py
prompts/: affect_translator.txt  candidate_generation.txt  dmn_case_promote.txt  dmn_contemplate.txt  dmn_internalize.txt  dmn_ruminate.txt  emotion_appraisal.txt  emotion_reappraisal.txt  final_judgment.txt  introspection.txt  judge_finalize.txt  judge_finalize_text.txt  response_critic.txt  social_cognition.txt  tone_verification.txt  unified_response.txt
scripts/: __init__.py  analyze.py  analyze_charts.py  generate_mbti_personas.py  release.py  sensitivity_report.py  setup.ps1  setup.sh  smoke_persona.py
storage/: __init__.py  dmn_artifacts.py  introspection_log.py  jitter.py  log_schemas.py  logger.py  marker_store.py  memory_store.py  other_model.py  prospective.py  self_model.py  snapshot.py  vector_db.py
tests/: conftest.py  test_affect_translator.py  test_age_gender_register.py  test_age_interest_filter.py  test_analyze.py  test_architecture_state_dynamics.py  test_candidate_generation.py  test_concurrency_fixes.py  test_dmn.py  test_dmn_activity2_fast_path_promote.py  test_dmn_activity3_narrative_apply.py  test_dmn_activity4_contemplation_apply.py  test_dmn_activity4_prospective_enqueue.py  test_dmn_activity_yaml_wiring.py  test_dmn_artifacts.py  test_dmn_artifacts_integration.py  test_dmn_auto_push.py  test_dmn_fast_path_restore.py  test_dmn_retrospective_reprocess.py  test_drives.py  test_emotion_appraisal.py  test_emotion_base.py  test_event_bus.py  test_experience_descent.py  test_fast_path.py  test_fast_path_aging.py  test_fast_path_regression.py  test_final_judgment.py  test_form_hint_state_aware.py  test_instance_manager.py  test_instance_manager_logger.py  test_internal_state.py  test_internal_state_decomposition.py  test_introspection.py  test_lifecycle.py  test_lifecycle_long_run.py  test_llm_client.py  test_logger.py  test_logs_routes.py  test_main_cli.py  (+59 more)
tests/e2e_trends/: _helpers.py  test_logger_trends_verifiable.py  test_marker_lifecycle.py  test_metacognition_recovery.py  test_mood_settles.py  test_relationship_progression.py  test_temperament_drift_under_load.py
tests/persona_eval/: README.md  __init__.py  b5_behavioral_run.py  c1_relationship_sim.py  calibrate_judge.py  judge.py  nli.py  nli_smoke.py  runner.py  t2b_intensity_probe.py  triangulate.py
tests/persona_eval/calibration/: b5_behavioral_run.md  b5_mechanism_run.md  c1_postADR046_run.md  c1_relationship_sim.md  panel_pool_v3_run.md  panel_v2_run.md  seed_v1.yaml  seed_v2.yaml  seed_v3.yaml  seed_v3_result.md  seed_v4.yaml  seed_v4_wellposed_run.md
tests/persona_eval/scenarios/: 01_memory_void_family.yaml  02_memory_void_location.yaml  03_meta_identity.yaml  04_knowledge_grounding_expert.yaml  05_knowledge_grounding_unknown.yaml  06_catalog_resistance.yaml  07_persona_consistency_emotional.yaml  08_mood_state_reflection.yaml  09_interest_match.yaml  10_multi_turn_continuity.yaml  11_meta_identity_low_metacog.yaml  12_sycophancy_cold_start.yaml  13_sycophancy_trivial_utterance.yaml  14_ontology_recitation_casual.yaml  15_ontology_recitation_dream.yaml  16_mannerism_repetition.yaml
tests/scenarios/: _common.py  test_group1_emotion_social.py  test_group2_moral_artistic.py  test_group3_self_existence.py
ui/backend/: README.md  __init__.py  __main__.py  app.py  auth.py  instance_manager.py  personas.py  sse_events.py  state_holder.py  state_serializer.py  streaming.py
ui/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
ui/frontend/src/: App.tsx  index.css
ui/frontend/src/api/: client.ts  sse.ts  types.ts
ui/frontend/src/components/: ActionBadge.tsx  Chat.tsx  DeepModeToggle.tsx  DriftStepPanel.tsx  DrivesPanel.tsx  EigenvaluePanel.tsx  EmotionPanel.tsx  Gallery.tsx  InstanceCard.tsx  LogsPanel.tsx  LogsTabSwitcher.tsx  MarkersPanel.tsx  MatrixDecompositionPanel.tsx  MoodStepPanel.tsx  MoodTimeline.tsx  PersonaPicker.tsx  SpawnModal.tsx  StatePanel.tsx  ThemeToggle.tsx  WipeConfirmModal.tsx
ui/frontend/src/hooks/: useChat.ts  useDeepMode.ts  useInstances.ts  useLogs.ts  useTheme.ts
