[project]
name = "humanoid"
version = "0.1.0"
description = "인지 아키텍처 v12 — 이벤트 드리븐 이중계층 시뮬레이션"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "chromadb>=0.5",
    "litellm>=1.0",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
ui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
    "slowapi>=0.1.9",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:dash"
markers = [
    "scenario: spec §12 27-scenario integration tests (mock LLM)",
]

[tool.uv]
# uv (https://docs.astral.sh/uv/) — fast Python package + venv manager.
# Run `./scripts/setup.sh` (or `scripts\setup.ps1`) for one-shot setup,
# or directly: `uv sync --extra dev --extra ui`.
# Dev / UI extras are declared under [project.optional-dependencies] above
# and consumed via `--extra` flags; no separate dev-dependencies block needed.
