[project]
name = "humanoid"
version = "0.1.0"
description = "인지 아키텍처 v12 — 이벤트 드리븐 이중계층 시뮬레이션"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "chromadb>=0.5",
    "litellm>=1.0",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
ui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
    "slowapi>=0.1.9",
]
analyze = [
    # Wave 14B 오프라인 로그 분석 도구 (`scripts/analyze.py`).
    # default deps 에는 넣지 않는다 — pandas/matplotlib 설치가 무거워 CLI/UI 만
    # 쓰는 사용자에게 부담. `uv sync --extra analyze` 로 opt-in.
    "pandas>=2.0",
    "matplotlib>=3.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# 명시적으로 import 가능한 패키지만 잡는다. setuptools 의 flat-layout 자동탐색은
# config/, prompts/, chroma_db/, instances/, storage_data/ 같은 데이터/런타임
# 디렉토리까지 "top-level package" 로 오인해서 빌드를 막는다.
include = ["core*", "high_level*", "low_level*", "interface*", "llm*", "storage*", "ui*"]
exclude = ["tests*", "scripts*", "docs*", ".venv*", "instances*", "chroma_db*", "storage_data*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:dash"
markers = [
    "scenario: spec §12 27-scenario integration tests (mock LLM)",
    "trend: multi-turn integration trend tests (Wave 14C, mock LLM)",
    "live: tests requiring real LLM API calls (off by default)",
]

[tool.uv]
# uv (https://docs.astral.sh/uv/) — fast Python package + venv manager.
# Run `./scripts/setup.sh` (or `scripts\setup.ps1`) for one-shot setup,
# or directly: `uv sync --extra dev --extra ui`.
# Dev / UI extras are declared under [project.optional-dependencies] above
# and consumed via `--extra` flags; no separate dev-dependencies block needed.
